--- a/templates/opcion.html
+++ b/templates/opcion.html
@@ -137,10 +137,11 @@
             <!-- Box 2: Diagnóstico -->
             <div class="box box-celeste">
                 <h3><strong>Diagnóstico clínico:</strong></h3>
-                <button onclick="location.href='{{ url_for('diagnostico') }}'">Escala de gravedad y funcionalidad</button>
-                <button onclick="location.href='{{ url_for('diagnosticop1') }}'">Diagnóstico práctico 1 - Elevación de dedos</button>
-                <button onclick="location.href='{{ url_for('diagnosticop2') }}'">Diagnóstico práctico 2 - Flexión/Extensión</button>
-                <button onclick="location.href='{{ url_for('diagnosticop3') }}'">Diagnóstico práctico 3 - Flexión de la muneca</button>
+               <!--<button onclick="location.href='{{ url_for('sensado') }}'">Sensado de motores</button>-->
+                <button onclick="location.href='{{ url_for('diagnostico') }}'">Cuestionario de Boston (BCTQ)</button>
+                <button onclick="location.href='{{ url_for('diagnosticop1') }}'">Diagnóstico 1 - Elevación de dedos</button>
+                <button onclick="location.href='{{ url_for('diagnosticop2') }}'">Diagnóstico 2 - Flexión/Extensión</button>
+                <button onclick="location.href='{{ url_for('diagnosticop3') }}'">Diagnóstico 3 - Flexión de la muneca</button>
 
             </div>
 
