--- a/templates/progresopaciente.html
+++ b/templates/progresopaciente.html
@@ -76,7 +76,8 @@
 
     <!-- Botón Volver -->
     <div class="top-bar d-flex justify-content-start">
-        <button class="btn btn-secondary" onclick="window.history.back();">← Volver</button>
+        <!--<button class="btn btn-secondary" onclick="window.history.back();">← Volver</button>-->
+        <button class="btn btn-secondary" onclick="window.location.href='/opcion';">← Volver</button>
     </div>
 
     <div class="role-container">
