--- a/templates/rehabilitacion1.html
+++ b/templates/rehabilitacion1.html
@@ -56,7 +56,7 @@
 
   <!-- Enlace Volver -->
   <div class="volver-link">
-    <a href="{{ url_for('opcion') }}" class="btn btn-outline-secondary">← Volver</a>
+    <a href="{{ url_for('progresopaciente') }}" class="btn btn-outline-secondary">← Volver</a>
   </div>
 
   <h2><strong>Rutina de Rehabilitación #1 - Flexión de la muñeca</strong></h2>
