--- a/templates/rehabilitacion2.html
+++ b/templates/rehabilitacion2.html
@@ -55,7 +55,7 @@
 <body>
 
   <div class="volver-link">
-    <a href="{{ url_for('opcion') }}" class="btn btn-outline-secondary">← Volver</a>
+    <a href="{{ url_for('progresopaciente') }}" class="btn btn-outline-secondary">← Volver</a>
   </div>
 
   <h2><strong>Rutina de Rehabilitación #2 - Flexión/Extensión de dedos</strong></h2>
